@@ -1,3 +1,7 @@
+24/02/2014:
+	- Added missing function timer to JTL.cc and increased output precision in PFL.cc to 9.
+
+
 24/01/2014:
 	- Changes to IIPImage and KakaduImage constructors to force correct initialization of
 	  the tile size.
